test/io/ferguson/bits-errors.big-readbits.good
bits-errors.chpl:56: error: halt reached - readbits nbits=9 > bits in v:uint(8)
